--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,10 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Sync files
-      uses: SamKirkland/web-deploy@v1
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        target-server:  ${{ secrets.FTP_SERVER }}
-        remote-user: ${{ secrets.FTP_USERNAME }}
-        private-ssh-key: ${{ secrets.FTP_PASSWORD }}
+        server:  ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
         destination-path: ${{ secrets.FTP_DESTINATION }}
+        dry-run: true
