--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,17 @@
-on: push
+
 name: Deploy website
+on:
+  push:
+    branches:
+      - master
 jobs:
   web-deploy:
     name:  Deploy
     runs-on: ubuntu-latest    
     steps:
-    - name:  Get latest code
-      uses: actions/checkout@v3
-    
-    - name: Sync files
+    - name: Checkout Repo
+      uses: actions/checkout@v3    
+    - name: Deploy
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server:  ${{ secrets.FTP_SERVER }}
