--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,4 @@ jobs:
         server:  ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        destination-path: ${{ secrets.FTP_DESTINATION }}
-        dry-run: true
+        server-dir: ${{ secrets.FTP_DESTINATION }}       
